# TCC

./: .gitignore  LICENSE
actuator/: CMakeLists.txt  package.xml
actuator/src/: actuator_sub.cpp  actuator_sub.hpp  grsim_actuator_sub.cpp  grsim_actuator_sub.hpp  sim_actuator.cpp
controller/: CMakeLists.txt  package.xml
controller/src/: map.cpp  ssl_nav_node.cpp  ssl_robot_ctr.cpp
controller/src/controller/: behavioralnode.cpp  behavioralnode.hpp  controller.cpp  controller.hpp  infobus.cpp  infobus.hpp  ssl_behavioralnode.cpp  ssl_behavioralnode.hpp  ssl_controller.cpp  ssl_controller.hpp  state.cpp  state.hpp  state_gk.cpp  state_gk.hpp  state_halt.cpp  state_halt.hpp  worldmap.cpp  worldmap.hpp
controller/src/map/: exithandler.cc  map_node.cpp  map_node.hpp  worldmap.hpp
controller/src/map/gui/: soccerview.cc  soccerview.hh
controller/src/map/gui/util/: field_default_constants.hh
controller/src/navigation/: navigation.cpp  navigation.hpp
controller/src/navigation/ctralg/: control_algorithm.cpp  control_algorithm.hpp  discrete_pid.cpp  discrete_pid.hpp
controller/src/navigation/navalg/: navigation_algorithm.cpp  navigation_algorithm.hpp  pf.cpp  pf.hpp
controller/src/utils/: element.hpp  entity.cpp  entity.hpp  field.hpp  groups.hpp  infobus.cpp  infobus.hpp  states.hpp  utils.cpp  utils.hpp  vector.cpp  vector.hpp
controller/src/utils/fields/: field_ssl2019.hpp
ctr_msgs/: CMakeLists.txt  package.xml
ctr_msgs/action/: Nav.action
ctr_msgs/msg/: Command.msg  Navigation.msg  Position.msg  Robot.msg  State.msg  Velocity.msg  Visionpkg.msg  Visionpkgstamped.msg
ctr_msgs/srv/: Elementrequest.srv  Fieldinformationrequest.srv  Inforequest.srv  Positionrequest.srv  State.srv
external_agent/: CMakeLists.txt  package.xml
external_agent/src/: colors.h  refbox_interface.cpp  refbox_interface.hpp  refbox_node.cpp
grsim_package_handler/: CMakeLists.txt  package.xml
grsim_package_handler/msg/: Robot.msg  Visionpkg.msg  visionpkg.msg
grsim_package_handler/scripts/: protobuf.sh
grsim_package_handler/src/: entity.cpp  entity.hpp  grsim_node.cpp  position.hpp  robot.hpp  sensor.hpp  utils.cpp  utils.hpp  vision_pub.cpp  vision_pub.hpp  wrtimer.h
refbox_interface/: CMakeLists.txt  package.xml
refbox_interface/src/: refbox_interface.cpp  refbox_node.cpp
vision/: CMakeLists.txt  package.xml
vision/src/: grsim_node.cpp  position.hpp  robot.hpp  vision_pub.cpp  vision_pub.hpp
