<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grsim_package_handler</name>
  <version>0.0.0</version>
  <description>GRSIM PACKAGE HANDLER: A node responsible for receiving data from grsim and split it into topics representing what each robot can percept from the environment </description>
  <maintainer email="augusto.ribeiro@wr.sc.usp.br">aribeiro</maintainer>
  <license>License: please check the lincense in our repository</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
